--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+:root {
+    --light-blue: #6FB9E1;
+    --primary: #f8f8f8; /* Close to a soft off-white color */
+    --secondary: #ececec;
+    --terciary: #1D1D1B;
+    --heading:#242424;
+    --text:#383838;
+    --shadow:29,29,27;
+}
+
+.dark-theme{
+    --light-blue: #6FB9E1;
+    --primary: #1D1D1B; /* Close to a soft off-white color */
+    --secondary: #282828;
+    --terciary: #f8f8f8;
+    --heading:#d6d6d6;
+    --text:#bdbdbd;
+    --shadow:248,248,248;
+}
+
 /* General Reset */
 * {
     margin: 0;
@@ -28,21 +48,27 @@ body {
     /* font-family: "Space Mono", monospace; */
     font-family: "Manrope", sans-serif;
     font-optical-sizing: auto;
-    color: #333;
+    /* color: #333; */
     background-color: inherit; /* This will now only cover the body area */
 }
 
 /* Header */
 header {
-    background-color: #fbfafa;
-    color: #141414;
+    background-color: var(--primary);
+    color: var(--terciary);
     padding: 2dvh 4dvw;
     position: fixed; /* Fix the header to the top */
     top: 0; /* Ensure it sticks to the top */
     left: 0;
     width: 100%; /* Stretch across the full width of the page */
     z-index: 1000; /* Ensure it appears above other elements */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional shadow for depth */
+    box-shadow: 0 2px 5px rgba(var(--shadow), 0.1); /* Optional shadow for depth */
+}
+
+header nav {
+    display: flex; /* Set the navbar container to use flexbox */
+    align-items: center; /* Align items vertically */
+    justify-content: space-between; /* Space out the `ul` and the icon */
 }
 
 /* Navbar Styling */
@@ -54,6 +80,7 @@ header nav ul {
     align-items: center; /* Center items vertically */
     justify-content: flex-start; /* Align navbar items to the left */
     gap: 2dvw;
+    margin-bottom: -2dvh;
 }
 
 header nav li {
@@ -61,31 +88,41 @@ header nav li {
 }
 
 /* Logo Styling */
-header nav img {
-    width: 15dvh; /* Make the logo bigger based on viewport height */
+.header-logo{
+    width:30dvh; /* Make the logo bigger based on viewport height */
     height: auto;
+    fill: var(--terciary);
     margin-right: 2dvw; /* Space between logo and menu items */
+
 }
 
 /* Link Styling */
 header nav a {
     text-decoration: none;
-    color: #141414;
+    color: var(--terciary);
     font-weight: bold;
     font-size: 1rem;  /* Base font size */
     transition: transform 0.2s ease, color 0.3s ease;  /* Smooth transition for transform and color */
 }
 
 header nav a:hover {
-    color: #f9a825;  /* Gold color on hover */
+    color: var(--light-blue);  /* Gold color on hover */
     transform: scale(1.05);  /* Slightly enlarge the text */
+}
+
+/* Icon Styling */
+#icon{
+    width: 2vh;
+    cursor: pointer;
+    margin-left: auto; /* Push the icon to the far right */
+    padding: 0;
 }
 
 
 /* Main Content */
 main {
     padding: 0rem;
-    background-color: white;
+    background-color: var(--primary);
 }
 
 section {
@@ -94,11 +131,12 @@ section {
 
 h1, h2 {
     margin-bottom: 2dvh;
-    color: #222;
+    color: var(--heading);
 }
 
 p {
     margin-bottom: 1.5dvh;
+    color: var(--text);
 }
 
 
@@ -141,14 +179,13 @@ p {
     align-items: center; /* Vertically align items */
     justify-content: space-between; /* Place text on the left and image on the right */
     padding: 4dvh 2dvh; /* Adds padding around the section */
-    color: #333; /* Dark text color for readability */
+    color: inherit; /* Dark text color for readability */
     border-radius: 1dvh; /* Rounded corners for a softer look */
     gap: 2dvh; /* Space between sections */
 }
 
 #about h1 {
     font-size: 3dvh; /* Larger font size for the heading */
-    color: #2c3e50; /* Darker color for the heading */
     margin-bottom: 1dvh; /* Space below the heading */
     font-family: "Space Mono", monospace; /* A modern font family */
     max-width: 50dvw; /* Limit the width of the heading */
@@ -157,7 +194,6 @@ p {
 #about p {
     font-size: 2dvh; /* Slightly larger font size for readability */
     line-height: 1.6; /* Adds spacing between lines of text */
-    color: #555; /* Lighter color for the paragraph text */
     max-width: 50dvw; /* Restrict the width of the text */
 }
 
@@ -182,8 +218,7 @@ p {
 /* Portfolio Section */
 #portfolio {
     padding: 4dvh 2dvw;
-    background-color: #f4f4f9;
-    color: #333;
+    background-color: var(--secondary);
     text-align: center;
 }
 
@@ -191,13 +226,11 @@ p {
     font-family: "Space Mono", monospace; /* A modern font family */
     font-size: 3dvh;
     margin-bottom: 2dvh;
-    color: #2c3e50;
 }
 
 #portfolio p {
     font-size: 2dvh;
     margin-bottom: 4dvh;
-    color: #555;
     line-height: 1.6;
 }
 
@@ -211,8 +244,8 @@ p {
 
 /* Portfolio Item */
 .portfolio-item {
-    background-color: #fff;
-    border: 0.2dvh solid #ddd;
+    background-color: var(--primary);
+    border: 0.2dvh solid var(--secondary);
     border-radius: 1dvh;
     box-shadow: 0 0.5dvh 1dvh rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
     overflow: hidden; /* Ensure content fits within the card */
@@ -236,13 +269,11 @@ p {
 .portfolio-item h2 {
     font-size: 2dvh; /* Responsive font size based on viewport height */
     margin: 1dvh; /* Adjusted margin for responsiveness */
-    color: #2c3e50;
 }
 
 .portfolio-item p {
     font-size: 1.5dvh; /* Responsive font size based on viewport height */
     margin: 0 1dvh 1dvh; /* Adjusted margins for consistency */
-    color: #666;
     line-height: 1.6;
 }
 
@@ -262,14 +293,12 @@ p {
     font-family: "Space Mono", monospace; /* A modern font family */
     font-size: 3dvh;
     margin-bottom: 2dvh;
-    color: #2c3e50;
     text-align: center;
 }
 
 #contact p {
     font-size: 2dvh;
     margin-bottom: 4dvh;
-    color: #555;
     text-align: center;
 }
 
@@ -287,7 +316,7 @@ p {
 .form-group label {
     font-weight: bold;
     margin-bottom: 1dvh; /* Responsive margin */
-    color: #333;
+    color:var(--terciary);
 }
 
 .form-group input,
@@ -308,10 +337,10 @@ p {
 
 button {
     padding: 1dvh 3dvw; /* Responsive padding */
-    font-size: 1.5dvh; /* Responsive font size */
+    font-size: 2dvh; /* Responsive font size */
     font-weight: bold;
-    color: #fff;
-    background-color: #007BFF;
+    color: var(--terciary);
+    background-color: var(--light-blue);
     border: none;
     border-radius: 0.5dvh; /* Responsive border radius */
     cursor: pointer;
@@ -321,19 +350,19 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #5497bb;
 }
 
 
 /* Footer Styling */
 .site-footer {
-    background-color: #222;
-    color: #fff;
+    background-color: var(--terciary);
     padding: 4dvh 0;
     text-align: center;
 }
 
 .site-footer .footer-content {
+    /* display: block; */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -349,6 +378,7 @@ button:hover {
     flex: 1;
     text-align: center;
     margin-top: 6dvh;
+    color:var(--primary);
 }
 
 .site-footer .footer-content .logo {
@@ -358,14 +388,15 @@ button:hover {
     margin-bottom: 0%;
 }
 
-.site-footer .footer-content .logo img {
+.footer-logo {
     width: 100%; /* Make sure the logo fits the container */
-    max-width: 150px; /* Limit the logo width for large screens */
+    max-width: 35vh; /* Limit the logo width for large screens */
     height: auto;
-    fill: white;
+    fill: var(--primary);
 }
 
 .social-media {
+    /* display: block; */
     display: flex;
     flex: 1;
     padding-right: 0;
@@ -376,7 +407,7 @@ button:hover {
 
 .social-icon {
     font-size: 2dvh;
-    color: #fff;
+    color: var(--primary);
     transition: color 0.3s ease;
     display: flex;
     align-items: center;
@@ -435,7 +466,7 @@ button:hover {
     margin: 0 10px;
     font-size: 2dvh;
     transition: transform 0.3s ease;
-    color: inherit;
+    color:var(--primary);
 }
 
 /* Add hover effect for the icons */
@@ -456,14 +487,15 @@ button:hover {
 }
 
 .footer-menu a {
-    color: #fff;
+    color: var(--primary);
     font-size: 1.8dvh;
+    font-weight: bold;
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 .footer-menu a:hover {
-    color: #f9a825;
+    color: var(--light-blue);
 }
 
 /* Estils generals per al main de la política de privacitat */
@@ -472,8 +504,7 @@ button:hover {
     max-width: 100%;
     margin: 0 auto;
     font-family: 'Manrope', sans-serif;
-    color: #333;
-    background-color: transparent;
+    background-color: var(--primary);
     line-height: 1.6;
     margin-top:5dvh;
 }
@@ -481,20 +512,21 @@ button:hover {
 .privacy-policy h1 {
     font-family: "Space Mono", monospace; 
     font-size: 2.5rem;
-    color: #000;
+    color: var(--heading);
     margin-bottom: 1rem;
     text-align: center;
 }
 
 .privacy-policy h2 {
     font-size: 1.8rem;
-    color: #444;
+    color: var(--heading);
     margin-top: 2rem;
     margin-bottom: 0.5rem;
 }
 
 .privacy-policy p {
     margin-bottom: 1.5rem;
+    color: var(--text);
 }
 
 .privacy-policy ul {
@@ -505,6 +537,7 @@ button:hover {
 
 .privacy-policy li {
     margin-bottom: 0.5rem;
+    color:var(--text);
 }
 
 .policy-container {
@@ -552,22 +585,22 @@ button:hover {
     cursor: pointer;
     border: none;
     border-radius: 25px; /* Softer rounded corners */
-    background-color: #1a1a1a;
+    background-color: var(--dark-grey);
     color: white;
     transition: background-color 0.3s ease;
   }
   
   #allow:hover,
   #decline:hover {
-    background-color: #444444; /* Darker shade on hover */
+    background-color: var(--dark-grey); /* Darker shade on hover */
   }
   
   #decline {
-    background-color: #9e1a1a; /* Red background for decline */
+    background-color: var(--light-blue); /* Red background for decline */
   }
   
   #decline:hover {
-    background-color: #bb2d2d; /* Brighter red on hover */
+    background-color: #5b9bbe; /* Brighter red on hover */
   }
   
   @media (max-width: 800px) {
@@ -598,10 +631,21 @@ button:hover {
         padding: 0;
     }
 
+    header{
+        position:relative;
+    }
+
+    header nav {
+        display: block; /* Set the navbar container to use flexbox */
+        align-items: center; /* Align items vertically */
+        justify-content:space-around; /* Space out the `ul` and the icon */
+    }
+
     header nav ul {
-        flex-direction: column;
+        display: flex;
+        flex-direction:column;
         gap: 1dvh; /* Reduce gap for mobile */
-        justify-content: center;
+        justify-content:end;
     }
 
     header nav img {
